--- a/package.json
+++ b/package.json
@@ -4,13 +4,22 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@nrwl/esbuild": "15.4.5",
+    "@nrwl/eslint-plugin-nx": "15.4.5",
     "@nrwl/js": "15.4.5",
+    "@nrwl/linter": "15.4.5",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "15.4.5",
+    "@types/node": "18.7.1",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "esbuild": "^0.15.7",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
     "nx": "15.4.5",
     "prettier": "^2.6.2",
     "typescript": "~4.8.2"
-  }
+  },
+  "dependencies": {}
 }
